# flashbackprism

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  Main.qml  README.md  fpnotificationprocessor.cpp  fpnotificationprocessor.h  fpphotomonitor.cpp  fpphotomonitor.h  fpqmlutils.cpp  fpqmlutils.h  main.cpp  update_icon.sh
android/: AndroidManifest.xml  build.gradle
android/res/values/: styles.xml
android/res/xml/: qtprovider_paths.xml
android/src/luke/flashbackprism/: FlashbackBootReceiver.java  FlashbackPrismMonitor.java
data/: fpconfigdata.cpp  fpconfigdata.h  fplogindata.cpp  fplogindata.h  fppersistentsetup.cpp  fppersistentsetup.h  fpqueryresultitem.cpp  fpqueryresultitem.h
qml/: Style.qml
qml/components/: FPGridView.qml  FPOverlayFontAwesome.qml  FPPhotoOverlayText.qml  FPPopupBase.qml  FPPopupMessage.qml  FPPopupOk.qml  FPPreviewElement.qml  FPText.qml  FPTopBarButton.qml
qml/views/: FPAlbumsToday.qml  FPDay.qml  FPLogin.qml  FPPhotoView.qml  FPTopBar.qml  FPYearListView.qml  FPYearView.qml  FPZoomableImage.qml
rest/: fpconfigrequest.cpp  fpconfigrequest.h  fpflashbackyearsrequest.cpp  fpflashbackyearsrequest.h  fploginrequest.cpp  fploginrequest.h  fpphotosrequest.cpp  fpphotosrequest.h  fprequest.cpp  fprequest.h  fprequestphotoaction.cpp  fprequestphotoaction.h
ui/: fpphotoprovider.cpp  fpphotoprovider.h  fpyearlistbackend.cpp  fpyearlistbackend.h
